[gd_scene load_steps=6 format=2]

[ext_resource path="res://models/bedroom/closet.tscn" type="PackedScene" id=1]
[ext_resource path="res://zooms/bedroom_closet.gd" type="Script" id=2]
[ext_resource path="res://models/ui/info.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene_outFlat.tres" type="Environment" id=4]
[ext_resource path="res://common/gamePad/navigation.tscn" type="PackedScene" id=5]

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="ARVROrigin" type="ARVROrigin" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0390011, 0.0873256, 0.339972 )

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]
transform = Transform( 0.99985, 0, 0.0173303, 0, 1, 0, -0.0173303, 0, 0.99985, 0, 0.156372, 0 )
environment = ExtResource( 4 )

[node name="closet" parent="." instance=ExtResource( 1 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -0.909361, 0, 0.65505 )

[node name="info" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.63725, 0, -5.57102e-08, 0, 0.370439, 0, 8.74228e-08, 0, -1, 0.0103457, 1.9946, 0.485146 )

[node name="navigation" parent="." instance=ExtResource( 5 )]
displayLeftNav = true
displayButtonA = true
displayButtonB = true
[connection signal="navDown" from="navigation" to="." method="_on_navigation_navDown"]
[connection signal="navLeft" from="navigation" to="." method="_on_navigation_navLeft"]
[connection signal="navRight" from="navigation" to="." method="_on_navigation_navRight"]
[connection signal="navUp" from="navigation" to="." method="_on_navigation_navUp"]
[connection signal="pushButtonA" from="navigation" to="." method="_on_navigation_pushButtonA"]
[connection signal="pushButtonB" from="navigation" to="." method="_on_navigation_pushButtonB"]
